ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: docker-backend
spec:
  ports:
    - name: n8n
      port: 5678
      targetPort: 5678
    - name: jira
      port: 8080
      targetPort: 8080
    - name: postgres
      port: 5432
      targetPort: 5432

---
apiVersion: v1
kind: Endpoints
metadata:
  name: docker-backend
subsets:
  - addresses:
      - ip: 62.146.232.100
    ports:
      - name: n8n
        port: 5678
      - name: jira
        port: 8080
      - name: postgres
        port: 5432

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - n8n-tts.minhtanit.com
      secretName: n8n-tts-minhtanit-com
    - hosts:
        - jira-tts.minhtanit.com
      secretName: jira-tts-minhtanit-com
  rules:
    - host: n8n-tts.minhtanit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-backend
                port:
                  name: n8n
    - host: jira-tts.minhtanit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-backend
                port:
                  name: jira
